科技文化节2

--- a/游戏介绍.html
+++ b/游戏介绍.html
@@ -9,17 +9,17 @@
 <div  id="body">
 
     <div id="frame" >
-        <a id="a1" class="num">5</a>
+        <a id="a1" class="num" >5</a>
         <a id="a2" class="num">4</a>
         <a id="a3" class="num">3</a>
         <a id="a4" class="num">2</a>
         <a id="a5" class="num">1</a>
         <div id="photos" class="play">
-            <img  src="1.png">
-            <img src="2.png" >
-            <img src="4.png" >
-            <img src="5.jpg" >
-            <img src="3.png" >
+            <img  src="1.png" alt="轮播图">
+            <img src="3.png" alt="轮播图">
+            <img src="4.png" alt="轮播图">
+            <img src="6.png" alt="轮播图">
+            <img src="3.png" alt="轮播图">
         </div>
     </div>
 
@@ -38,7 +38,7 @@
    <div id="picture3"></div>
     <div id="pr" >
         <br/><br/>
-        <img src="http://ossweb-img.qq.com/images/mv2/web20170525/pc/txt.png" width="520px"  height="1000px" >
+        <img src="http://ossweb-img.qq.com/images/mv2/web20170525/pc/txt.png" width="520px"  height="1000px" alt="游戏介绍">
     </div>
 </div>
 </body>
