--- a/游戏攻略.html
+++ b/游戏攻略.html
@@ -15,11 +15,11 @@
         <a id="a4" class="num">2</a>
         <a id="a5" class="num">1</a>
         <div id="photos" class="play">
-            <img  src="1.png">
-            <img src="2.png" >
-            <img src="4.png" >
-            <img src="5.jpg" >
-            <img src="3.png" >
+            <img  src="1.png" alt="轮播图">
+            <img src="3.png" alt="轮播图">
+            <img src="4.png" alt="轮播图">
+            <img src="6.png" alt="轮播图">
+            <img src="5.png" alt="轮播图">
         </div>
     </div>
 
@@ -43,9 +43,8 @@
         <div  class="cur1"><br/><br/><br/><span>第四章：吊桥</span>&nbsp;&nbsp;</div>
         <div  class="cur1"><br/><br/><br/><span>第五章：群岛</span>&nbsp;&nbsp;</div>
         <div  class="cur1"><br/><br/><br/><span>后续...</span>&nbsp;&nbsp;</div>
-    </div>
 
-    <div class="pr4" >
+    <div class="pr41" >
         <div ><p style="text-indent: 2em">
             第一章很简单，旋转上图机关按钮，将道路连起来，就可以让罗尔顺利到达上部，完成第一章
         </p>
@@ -68,6 +67,7 @@
                 <span style="text-align: center;font-size: 25px;">全部游戏攻略</span>
             </a>
         </div>
+    </div>
     </div>
 </div>
 </body>
