--- a/玩家评价.html
+++ b/玩家评价.html
@@ -15,11 +15,11 @@
         <a id="a4" class="num">2</a>
         <a id="a5" class="num">1</a>
         <div id="photos" class="play">
-            <img  src="1.png">
-            <img src="2.png" >
-            <img src="4.png" >
-            <img src="5.jpg" >
-            <img src="3.png" >
+            <img  src="1.png" alt="轮播图">
+            <img src="3.png" alt="轮播图">
+            <img src="4.png" alt="轮播图" >
+            <img src="6.png" alt="轮播图">
+            <img src="5.png" alt="轮播图">
         </div>
     </div>
 
