--- a/精彩截图.html
+++ b/精彩截图.html
@@ -15,11 +15,11 @@
         <a id="a4" class="num">2</a>
         <a id="a5" class="num">1</a>
         <div id="photos" class="play">
-            <img  src="1.png">
-            <img src="2.png" >
-            <img src="4.png" >
-            <img src="5.jpg" >
-            <img src="3.png" >
+            <img  src="1.png" alt="轮播图">
+            <img src="3.png" alt="轮播图">
+            <img src="4.png" alt="轮播图">
+            <img src="6.png" alt="轮播图">
+            <img src="5.png" alt="轮播图">
         </div>
     </div>
 
@@ -39,7 +39,7 @@
 
     <div id="pr">
     <div  style="height: 150px ;width: 250px">
-        <video controls="controls" autoplay="autoplay" width="250px" height="150px">
+        <video controls="controls" autoplay="autoplay" width="250px" height="150px" >
             <source src="http://ustwo.com/images/home/ustwo-games.mp4" type="video/mp4" />
         </video>
     </div>
@@ -59,7 +59,7 @@
 </div>
 
     <div class="par3">
-        <img src="http://img11.18183.com/ku18183/image/2017/07/20/4264777b2599302ced5f47cce6110664.jpg" width="240px" height="420px">
+        <img src="http://img11.18183.com/ku18183/image/2017/07/20/4264777b2599302ced5f47cce6110664.jpg" width="240px" height="420px" alt="游戏截图">
     </div>
 
     <div style="text-align: center;height: 300px " >
@@ -67,9 +67,6 @@
             <span style="text-align: center;font-size: 25px;">更多游戏截图</span>
         </a>
     </div>
-</div>
-</div>
-</div>
 
 
     <div class="pr4" >
@@ -84,7 +81,7 @@
             </p>
         </div>
         <div  class="par3">
-            <img src="http://img11.18183.com/ku18183/image/2017/07/20/7db2aa911c33bde115888b7e2e4264d8.jpg" width="200px" height="380px">
+            <img src="http://img11.18183.com/ku18183/image/2017/07/20/7db2aa911c33bde115888b7e2e4264d8.jpg" width="200px" height="380px" alt="游戏截图">
         </div>
         <div style="height: 300px;width: 240px">
             <p>
@@ -96,6 +93,8 @@
                 </span>
             </p>
         </div>
+</div>
+    </div>
 </div>
 </body>
 </html>
