--- a/纪念碑谷2.html
+++ b/纪念碑谷2.html
@@ -11,22 +11,23 @@
 </audio>
 <div id="main">
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E6%9C%80%E6%96%B0%E8%B5%84%E8%AE%AF.html?_ijt=9brknitfjj7irhlikpnelt376h" target="_blank">
-        <img src="101.jpg">最新资讯</a></div>
+        <img src="1001.jpg" alt="最新资讯"></a></div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E6%B8%B8%E6%88%8F%E4%BB%8B%E7%BB%8D.html?_ijt=76a13ivmjs3cd40f5jk5nd649l" target="_blank">
-        <img src="102.png">游戏介绍</a></div>
+        <img src="1002.jpg" alt="游戏介绍"></a></div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E7%B2%BE%E5%BD%A9%E6%88%AA%E5%9B%BE.html?_ijt=jtv69deeiq7e9a8061g83l32e4" target="_blank">
-        <img src="103.png">精彩截图</a></div>
+        <img src="1003.jpg" alt="游戏截图"></a></div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E6%B8%B8%E6%88%8F%E6%94%BB%E7%95%A5.html?_ijt=5rmdjc223fngm7vlu2aefhal44" target="_blank">
-        <img src="104.png">游戏攻略</a></div>
-    <div class="Jiu"> <img src="105.png"></div>
+        <img src="1004.jpg" alt="游戏攻略"></a></div>
+    <div class="Jiu"><img src="15.gif" alt="纪念碑谷">
+    </div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E7%8E%A9%E5%AE%B6%E8%AF%84%E4%BB%B7.html?_ijt=5rmdjc223fngm7vlu2aefhal44" target="_blank">
-        <img src="106.png">玩家评价</a></div>
+        <img src="1006.jpg" alt="玩家评论"></a></div>
     <div class="Jiu"><a href="http://mv2.qq.com/?ADTAG=act.a20171016limited.pc" target="_blank">
-        <img src="107.png">官网</a></div>
+        <img src="1007.jpg" alt="官网"></a></div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E5%88%B6%E4%BD%9C%E5%9B%A2%E9%98%9F.html?_ijt=5rmdjc223fngm7vlu2aefhal44" target="_blank">
-        <img src="108.png">制作团队</a></div>
+        <img src="1008.jpg" alt="制作团队"></a></div>
     <div class="Jiu"><a href="http://localhost:63342/%E7%A7%91%E6%8A%80%E6%96%87%E5%8C%96%E8%8A%82web/%E7%BA%AA%E5%BF%B5%E7%A2%91%E8%B0%B72.html?_ijt=eiqjr58240iaiet8s6mrfug79i" target="_blank">
-        <img src="109.png">首页</a></div>
+        <img src="1009.jpg" alt="首页"></a></div>
 </div>
 </body>
 </html>
